PAE-220 tailor repo for team
- strip README.md to bare minimum
- describe intent of repo in README.md
- update app to start on port 2999 by default
- strip content from index page

--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,6 @@
 {
   "serviceName": "epr-re-ex-engineering-prototype",
+  "port": 2999,
   "plugins": {
     "govuk-frontend": {
       "rebrand": true
